dots container added

--- a/index.html
+++ b/index.html
@@ -14,7 +14,6 @@
   </head>
   <body>
     <!-- <h1>Images Gallery Slider</h1> -->
-
     <div class="slider">
       <div class="arrow-container left-arrow">
         <i class="fas fa-chevron-left fa-3x"></i>
@@ -28,6 +27,7 @@
       <div class="slide"><img src="img/lukasz.jpg" /></div>
       <div class="slide"><img src="img/v2osk.jpg" /></div>
       <div class="slide"><img src="img/vincent.jpg" /></div>
+      <div class="dots-container"></div>
     </div>
   </body>
 </html>
